--- a/templates/blocks/sacda-carousel.html.twig
+++ b/templates/blocks/sacda-carousel.html.twig
@@ -8,33 +8,41 @@
  *   {% include '@sacda/blocks/sacda-carousel.html.twig' with {
  *     slides: carousel_slides,
  *     autoplay_speed: carousel_autoplay_speed,
- *     slides_per_view: 1,
+ *     slides_per_view: 3,
+ *     slides_per_view_tablet: 2,
+ *     slides_per_view_mobile: 1,
  *     full_height: true
  *   } %}
  *
  * Variables:
  *   - slides: Array of slide objects with image_url, title, subtitle, link
  *   - autoplay_speed: Autoplay delay in milliseconds (default: 5000)
- *   - slides_per_view: Number of slides visible at once (default: 1)
+ *   - slides_per_view: Number of slides visible on desktop (default: 1)
+ *   - slides_per_view_tablet: Number of slides visible on tablet (default: slides_per_view)
+ *   - slides_per_view_mobile: Number of slides visible on mobile (default: 1)
  *   - full_height: Whether carousel takes full viewport height (default: false)
  */
 #}
 {% import '@sacda/macros/button.twig' as btn %}
 
-{% set height_class = full_height|default(false) ? 'h-screen' : 'h-[70vh]' %}
+{% set height_class = full_height|default(false) ? 'h-screen' : 'md:h-[70vh] aspect-square md:aspect-auto' %}
+{% set desktop_slides = slides_per_view|default(1) %}
+{% set tablet_slides = slides_per_view_tablet|default(desktop_slides) %}
+{% set mobile_slides = slides_per_view_mobile|default(1) %}
 
 {% if slides|length > 0 %}
 	<div
-		data-carousel data-autoplay-delay="{{ autoplay_speed|default(5000) }}" data-slides-per-view="{{ slides_per_view|default(1) }}" class="sacda-carousel relative w-full {{ height_class }}">
-		{# Viewport - the scrollable container #}
-		<div
-			data-carousel-viewport class="overflow-hidden">
-			{# Container - holds all items with flex layout #}
+		data-carousel 
+		data-autoplay-delay="{{ autoplay_speed|default(5000) }}" 
+		data-slides-per-view="{{ desktop_slides }}"
+		data-slides-tablet="{{ tablet_slides }}"
+		data-slides-mobile="{{ mobile_slides }}"
+		class="sacda-carousel relative w-full {{ height_class }}"
+	>
+		<div data-carousel-viewport class="overflow-hidden">
 			<div class="flex touch-pan-y -ms-4">
 				{% for slide in slides %}
-					{# Item - each slide #}
-					{# Slide basis controlled by CSS variable set from data attribute #}
-						<div class="carousel-slide min-w-0 shrink-0 grow-0 ps-4" style="flex-basis: calc(100% / {{ slides_per_view|default(1) }});"> {% if slide.link %}
+						<div class="carousel-slide min-w-0 shrink-0 grow-0 ps-4" style="flex-basis: calc(100% / {{ desktop_slides }});"> {% if slide.link %}
 							<a href="{{ slide.link }}" class="block relative {{ height_class }} overflow-hidden">
 							{% else %}
 								<div class="relative {{ height_class }} overflow-hidden">
