--- a/templates/navigation/footer.html.twig
+++ b/templates/navigation/footer.html.twig
@@ -31,11 +31,11 @@
 	class="sacda-footer relative flex flex-col-reverse justify-between gap-4 px-6 pt-10 pb-24 md:flex-row md:py-24 lg:flex-row lg:py-24 bg-foreground">
 	{# Partners section #}
 	<div class="">
-		<div class="flex flex-row items-center gap-5 pb-3">
+		<div class="flex md:flex-row flex-wrap items-center justify-center md:justify-start gap-5 pb-3 pt-3 md:pt-0">
 			{% if footer_partners is not empty %}
 				{% for partner in footer_partners %}
-					<a href="{{ partner.link }}" target="_blank" rel="noopener noreferrer" class="flex items-center w-auto h-16 min-w-0">
-						<img src="{{ partner.image }}" alt="{{ partner.name }}" class="h-16! w-auto object-fit"/>
+					<a href="{{ partner.link }}" target="_blank" rel="noopener noreferrer" class="flex items-center w-auto h-10 min-w-0">
+						<img src="{{ partner.image }}" alt="{{ partner.name }}" class="h-10 w-auto object-contain"/>
 					</a>
 				{% endfor %}
 			{% endif %}
