--- a/templates/page/page--front.html.twig
+++ b/templates/page/page--front.html.twig
@@ -18,6 +18,8 @@
 			slides: carousel_slides,
 			autoplay_speed: carousel_autoplay_speed,
 			slides_per_view: 3,
+			slides_per_view_tablet: 2,
+			slides_per_view_mobile: 1,
 		} %}
 		</div>
 
@@ -31,7 +33,7 @@
 
 			<div class="relative z-10 px-4 md:px-24">
 				<div class="container mx-auto">
-					<div class="flex flex-wrap mb-16 md:pb-20 border-b border-b-secondary">
+					<div class="flex flex-wrap pb-8 md:mb-16 md:pb-20 border-b border-b-secondary">
 						<div class="hidden md:block w-1/3 pr-4">
 							<h2 class="text-3xl uppercase font-bold text-secondary">SEARCH</h2>
 						</div>
