feat: basic stuff for collections page

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@
 @import "tw-animate-css";
 @import "./_base.css";
 @import "./_buttons.css";
+@import "./_collections.css";
 
 @source "../templates/**/*.twig";
 @source "../templates/**/*.html";
