--- a/templates/layout/region--content-top.html.twig
+++ b/templates/layout/region--content-top.html.twig
@@ -5,7 +5,7 @@
  */
 #}
 {% if content %}
-	<div class="region region-content min-h-[50vh] max-w-5xl mx-auto px-4">
+	<div class="region-content_top max-w-5xl mx-auto px-4">
 		{{ content }}
 	</div>
 {% endif %}
